# espresso

./: .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  minimal_script.py  requirements.txt
.github/workflows/: deploy.yml  push_pull.yml
cmake/: espresso_cmake_config.cmakein  espresso_override_clang_tidy_checks.cmake
doc/: bibliography.bib
doc/doxygen/: Doxyfile.in
doc/sphinx/: advanced_methods.rst  running.rst
doc/tutorials/: CMakeLists.txt  Readme.md
libs/: CMakeLists.txt
maintainer/CI/: build_cmake.sh  make_gh_pages.sh
maintainer/benchmarks/: CMakeLists.txt  lb.py  mc_acid_base_reservoir.py
maintainer/walberla_kernels/: Readme.md  code_generation_context.py  custom_additional_extensions.py  generate_ek_kernels.py  generate_lb_kernels.py  lbmpy_espresso.py  lees_edwards.py  pystencils_espresso.py  walberla_lbm_generation.py
samples/: contact_time.py  grand_canonical.py  lb_profile.py  lj_liquid_structurefactor.py  monte_carlo.py  reaction_ensemble.py  reaction_ensemble_complex_reaction.py
src/: CMakeLists.txt
src/config/: features.def
src/core/: CMakeLists.txt  integrate.cpp  reaction_ensemble.cpp  reaction_ensemble.hpp  thermostat.hpp
src/core/io/writer/: CMakeLists.txt  h5md_core.cpp  h5md_core.hpp  h5md_dataset.hpp  h5md_specification.cpp  h5md_specification.hpp  hdf5_patches.hpp
src/instrumentation/: CMakeLists.txt
src/instrumentation/include/instrumentation/: fe_trap.hpp
src/instrumentation/src/: fe_trap.cpp
src/instrumentation/tests/: CMakeLists.txt  fe_trap_test.cpp
src/script_interface/: CMakeLists.txt  ObjectHandle.cpp
src/script_interface/h5md/: CMakeLists.txt  h5md.cpp  h5md.hpp
src/walberla_bridge/: CMakeLists.txt
src/walberla_bridge/include/walberla_bridge/lattice_boltzmann/: LBWalberlaBase.hpp
src/walberla_bridge/src/electrokinetics/: EKinWalberlaImpl.hpp
src/walberla_bridge/src/electrokinetics/generated_kernels/: AdvectiveFluxKernel_double_precision.h  AdvectiveFluxKernel_single_precision.h  CMakeLists.txt  ContinuityKernel_double_precision.h  ContinuityKernel_single_precision.h  DiffusiveFluxKernelThermalized_double_precision.cpp  DiffusiveFluxKernelThermalized_double_precision.h  DiffusiveFluxKernelThermalized_single_precision.cpp  DiffusiveFluxKernelThermalized_single_precision.h  DiffusiveFluxKernelWithElectrostaticThermalized_double_precision.cpp  DiffusiveFluxKernelWithElectrostaticThermalized_double_precision.h  DiffusiveFluxKernelWithElectrostaticThermalized_single_precision.cpp  DiffusiveFluxKernelWithElectrostaticThermalized_single_precision.h  DiffusiveFluxKernelWithElectrostatic_double_precision.h  DiffusiveFluxKernelWithElectrostatic_single_precision.h  DiffusiveFluxKernel_double_precision.h  DiffusiveFluxKernel_single_precision.h  Dirichlet_double_precision.h  Dirichlet_single_precision.h  FixedFlux_double_precision.h  FixedFlux_single_precision.h  FrictionCouplingKernel_double_precision.h  FrictionCouplingKernel_single_precision.h
src/walberla_bridge/src/electrokinetics/reactions/generated_kernels/: CMakeLists.txt  ReactionKernelBulk_1_double_precision.h  ReactionKernelBulk_1_single_precision.h  ReactionKernelBulk_2_double_precision.h  ReactionKernelBulk_2_single_precision.h  ReactionKernelBulk_3_double_precision.h  ReactionKernelBulk_3_single_precision.h  ReactionKernelBulk_4_double_precision.h  ReactionKernelBulk_4_single_precision.h  ReactionKernelBulk_5_double_precision.h  ReactionKernelBulk_5_single_precision.h  ReactionKernelBulk_all.h  ReactionKernelIndexed_1_double_precision.h  ReactionKernelIndexed_1_single_precision.h  ReactionKernelIndexed_2_double_precision.h  ReactionKernelIndexed_2_single_precision.h  ReactionKernelIndexed_3_double_precision.h  ReactionKernelIndexed_3_single_precision.h  ReactionKernelIndexed_4_double_precision.h  ReactionKernelIndexed_4_single_precision.h  ReactionKernelIndexed_5_double_precision.h  ReactionKernelIndexed_5_single_precision.h  ReactionKernelIndexed_all.h
src/walberla_bridge/src/lattice_boltzmann/: LBWalberlaImpl.hpp  ResetForce.hpp  lb_kernels.cuh  lb_kernels.hpp
src/walberla_bridge/src/lattice_boltzmann/generated_kernels/: CMakeLists.txt  CollideSweepDoublePrecisionLeesEdwards.h  CollideSweepDoublePrecisionLeesEdwardsAVX.h  CollideSweepDoublePrecisionLeesEdwardsCUDA.h  CollideSweepDoublePrecisionThermalized.h  CollideSweepDoublePrecisionThermalizedAVX.h  CollideSweepDoublePrecisionThermalizedCUDA.h  CollideSweepSinglePrecisionLeesEdwards.h  CollideSweepSinglePrecisionLeesEdwardsAVX.h  CollideSweepSinglePrecisionLeesEdwardsCUDA.h  CollideSweepSinglePrecisionThermalized.h  CollideSweepSinglePrecisionThermalizedAVX.h  CollideSweepSinglePrecisionThermalizedCUDA.h  DynamicUBBDoublePrecision.cpp  DynamicUBBDoublePrecision.h  DynamicUBBDoublePrecisionCUDA.cu  DynamicUBBDoublePrecisionCUDA.h  DynamicUBBSinglePrecision.cpp  DynamicUBBSinglePrecision.h  DynamicUBBSinglePrecisionCUDA.cu  DynamicUBBSinglePrecisionCUDA.h  Dynamic_UBB_double_precisionCUDA.cu  Dynamic_UBB_single_precisionCUDA.cu  FieldAccessorsDoublePrecision.h  FieldAccessorsDoublePrecisionCUDA.cu  FieldAccessorsDoublePrecisionCUDA.cuh  FieldAccessorsSinglePrecision.h  FieldAccessorsSinglePrecisionCUDA.cu  FieldAccessorsSinglePrecisionCUDA.cuh  InitialPDFsSetterDoublePrecision.cpp  InitialPDFsSetterDoublePrecision.h  InitialPDFsSetterDoublePrecisionCUDA.cu  InitialPDFsSetterDoublePrecisionCUDA.h  InitialPDFsSetterSinglePrecision.cpp  InitialPDFsSetterSinglePrecision.h  InitialPDFsSetterSinglePrecisionCUDA.cu  InitialPDFsSetterSinglePrecisionCUDA.h  PackInfoPdfDoublePrecision.cpp  PackInfoPdfDoublePrecision.h  PackInfoPdfDoublePrecisionCUDA.cu  (+25 more)
src/walberla_bridge/src/utils/: boundary.hpp  types_conversion.hpp
src/walberla_bridge/tests/: CMakeLists.txt  LBWalberlaImpl_bspline_tests.cpp  LBWalberlaImpl_lees_edwards_tests.cpp  LBWalberlaImpl_unit_tests.cpp  lb_kernels_unit_tests.cpp  tests_common_ek.hpp  tests_common_lb.hpp
test_cpH_python/: reaction_methods.py
testsuite/python/: CMakeLists.txt  constant_pH.py  constant_pH_stats.py  constraint_homogeneous_magnetic_field.py  h5md.py  ibm.py  lb.py  (+14 more)
(+86 files in other folders)
